# spreadsheet-golf-tour-be

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_db.py  create_db.py  database.py  pyproject.toml  requirements.txt
seed_data/: golfers_seeder.py  match_picks_seeder.py  match_results_seeder.py  scorecards.json  scores_seeder.py  seeder.py  tournaments.json  tournaments_seeder.py  users_seed.py  users_seeder.py
seed_data/example_api_responses/: leaderboards.json  organizations.json  players.json  schedules.json
spreadsheet_golf_tour_be/: app.py  constants.py
spreadsheet_golf_tour_be/domain/use_case/: get_tournaments_use_case.py
spreadsheet_golf_tour_be/models/: golf_tourneys.py  golfers.py  match_picks.py  match_results.py  scores.py  season.py  tournaments.py  users.py  weekly_matches.py
spreadsheet_golf_tour_be/resources/: home.py  login.py  tournaments.py
spreadsheet_golf_tour_be/services/: rapid_api_wrapper.py  tournaments.py
