[tool.black]
line-length = 100
exclude = '''
/(
    \.git
    | \.venv
    | .env
)/
'''
[tool.poetry]
name = "spreadsheet-golf-tour-be"
version = "0.1.0"
description = "The Spreadsheet Golf Tour app is designed to manage a golf-picks pool amongst four friends. The golf-picks pool was originally maintained and stored in a spreadsheet, but has now upgraded to a full web app"
authors = ["Viktor R <vik.ristic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aniso8601 = "9.0.1"
certifi = "2024.2.2"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
filelock = "3.13.1"
flask = "3.0.2"
flask-restful = "0.3.10"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
identify = "2.5.35"
idna = "3.6"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
markupsafe = "2.1.5"
mccabe = "0.7.0"
nodeenv = "1.8.0"
packaging = "23.2"
pathspec = "0.12.1"
platformdirs = "4.2.0"
pymysql = "1.1.0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.1"
requests = "2.31.0"
six = "1.16.0"
sqlalchemy = "2.0.27"
sqlalchemy-utils = "0.41.1"
typing-extensions = "4.10.0"
urllib3 = "2.2.1"
werkzeug = "3.0.1"
distlib = "0.3.8"


[tool.poetry.group.dev.dependencies]
mypy-extensions = "1.0.0"
ipdb = "^0.13.13"
black = "24.2.0"
blinker = "1.7.0"
pycodestyle = "2.11.1"
pre-commit = "3.6.2"
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["E203", "E266", "W503", "W504"]
exclude = [".git", "__pycache__", "venv", ".venv"]
max-complexity = 10
max-line-length = 100
